--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Lint app w/ Black
         uses: rickstaa/action-black@v1
         with:
-          black_args: ". --check --exclude /github/workspace/*"
+          black_args: ". --check --include *.py --exclude /github/workspace/*"
 
   bump-tag:
     name: Create new tag
