--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,21 +31,9 @@ jobs:
         with:
           sarif_file: 'trivy-results.sarif'
 
-  black-lint:
-    name: Lint Python app
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Lint app w/ Black
-        uses: rickstaa/action-black@v1
-        with:
-          black_args: ". --check --include *.py --exclude /github/workspace/*"
-
   bump-tag:
     name: Create new tag
-    needs: [black-lint]
+    needs: []
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.save-output.outputs.version }}
